app/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: lumina
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      securityContext:
        fsGroup: 10001
      imagePullSecrets:
        - name: github-registry
      containers:
        - name: backend
          image: ghcr.io/traipoap/backend:0.0.46 # {"$imagepolicy": "flux-system:backend"}
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /metrics
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /metrics
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            allowPrivilegeEscalation: false
            #readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]

          volumeMounts:
            - name: exports-volume
              mountPath: /backend/exports
            - name: data-volume
              mountPath: /backend/data
      volumes:
        - name: exports-volume
          persistentVolumeClaim:
            claimName: backend-exports
        - name: data-volume
          persistentVolumeClaim:
            claimName: backend-data
