app/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: frontend-gateway
  namespace: lumina
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "frontend.codezap.win"
    allowedRoutes:
      namespaces:
        from: "All"
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "frontend.codezap.win"
    tls:
      mode: Terminate
      certificateRefs:
      - name: wildcard-tls-secret
        kind: Secret
    allowedRoutes:
      namespaces:
        from: All
